--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script defer src="app.js"></script>
   </head>
 
-  <</bo>
+  <body>
     <header>
       <h2>Natural History Museum</h2>
       <h1>Dinosaurs</h1>
